match api-spec with api response (delete 404 response and add 403 response)
